@@ -6,15 +6,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import young.blaybus.domain.job_search.JobSearch;
 import young.blaybus.domain.job_search.JobSearchArea;
-import young.blaybus.domain.job_search.JobSearchDay;
+import young.blaybus.domain.job_search.JobSearchTimeSlot;
 import young.blaybus.domain.job_search.repository.JobSearchRepository;
 import young.blaybus.domain.job_search.request.CreateJobSearchRequest;
 import young.blaybus.domain.job_search.request.UpdateJobSearchRequest;
 import young.blaybus.domain.job_search.response.DetailJobSearchResponse;
 import young.blaybus.domain.job_search.response.JobSearchAreaResponse;
+import young.blaybus.domain.job_search.response.JobSearchTimeSlotResponse;
 import young.blaybus.domain.member.Member;
 import young.blaybus.domain.member.repository.MemberRepository;
-import young.blaybus.util.enums.DayOfWeek;
 
 import java.time.LocalDateTime;
 import java.time.LocalTime;
@@ -35,28 +35,28 @@ public class JobSearchService {
 
     JobSearch jobSearch = JobSearch.builder()
             .member(member)
-            .startTime(LocalTime.parse(jobSearchRequest.startTime()))
-            .endTime(LocalTime.parse(jobSearchRequest.endTime()))
             .salary(jobSearchRequest.salary())
             .createdTime(LocalDateTime.now())
             .build();
 
-    List<JobSearchArea> jobSearchAreas = jobSearchRequest.jobSearchAreas().stream()
+    List<JobSearchArea> areas = jobSearchRequest.jobSearchAreas().stream()
             .map(areaRequest -> JobSearchArea.builder()
                     .address(areaRequest.address())
                     .jobSearch(jobSearch)
                     .build())
             .toList();
-    jobSearch.getJobSearchAreas().addAll(jobSearchAreas);
+    jobSearch.getJobSearchAreas().addAll(areas);
 
 
-    List<JobSearchDay> jobSearchDays = jobSearchRequest.dayList().stream()
-            .map(day -> JobSearchDay.builder()
-                    .day(day)
+    List<JobSearchTimeSlot> timeSlots = jobSearchRequest.timeSlots().stream()
+            .map(slot -> JobSearchTimeSlot.builder()
                     .jobSearch(jobSearch)
+                    .day(slot.day())
+                    .startTime(LocalTime.parse(slot.startTime()))
+                    .endTime(LocalTime.parse(slot.endTime()))
                     .build())
             .toList();
-    jobSearch.getDayList().addAll(jobSearchDays);
+    jobSearch.getTimeSlots().addAll(timeSlots);
 
     jobSearchRepository.save(jobSearch);
   }
@@ -76,22 +76,24 @@ public class JobSearchService {
     JobSearch jobSearch= jobSearchRepository.findByMemberId(memberId)
             .orElseThrow(()->new IllegalArgumentException("해당 회원의 구직 정보가 존재하지 않습니다."));
 
-    List<JobSearchAreaResponse> jobSearchAreaResponses = jobSearch.getJobSearchAreas().stream().map(jobSearchArea ->
+    List<JobSearchAreaResponse> areaResponses = jobSearch.getJobSearchAreas().stream().map(jobSearchArea ->
       JobSearchAreaResponse.builder().address(jobSearchArea.getAddress()).build()
     ).toList();
 
-    List<String> dayList = jobSearch.getDayList().stream()
-            .map(JobSearchDay::getDay)
-            .map(DayOfWeek::toString)
-            .collect(Collectors.toList());
+    List<JobSearchTimeSlotResponse> timeSlotResponses  = jobSearch.getTimeSlots().stream()
+            .map(slot -> JobSearchTimeSlotResponse.builder()
+                    .day(slot.getDay())
+                    .startTime(slot.getStartTime().toString())
+                    .endTime(slot.getEndTime().toString())
+                    .build())
+            .toList();
 
     return DetailJobSearchResponse.builder()
             .jobSearchId(jobSearch.getId())
-            .startTime(jobSearch.getStartTime().toString())
-            .endTime(jobSearch.getEndTime().toString())
             .salary(jobSearch.getSalary())
-            .jobSearchAreas(jobSearchAreaResponses)
-            .dayList(dayList)
+            .jobSearchAreas(areaResponses)
+            .timeSlots(timeSlotResponses)
             .build();
+
   }
 }
